--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "fcc-learn-node-with-express",
 	"version": "0.1.0",
+	"engines": {
+    "npm": ">=8.1.0",
+    "node": ">=16.13.0"
+  },
 	"dependencies": {
 		"body-parser": "^1.15.2",
 		"cookie-parser": "^1.4.3",
