--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "fcc-learn-node-with-express",
 	"version": "0.1.0",
 	"engines": {
-    "npm": ">=8.1.0",
-    "node": ">=16.13.0"
+    "npm": "8.1.0",
+    "node": "16.13.0"
   },
 	"dependencies": {
 		"body-parser": "^1.15.2",
